# eogum

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  WORK_IN_PROGRESS.md
apps/api/: .env.example  eogum-api.path.conf.example  eogum-api.service  pyproject.toml
apps/api/scripts/: backfill_source_assets.py  clip_segment_boundary_debug.py  recover_scribe_transcript.py  repair_clean_fcpxml_artifacts.py
apps/api/src/eogum/: auth.py  config.py  main.py  monitoring.py  public_access.py
apps/api/src/eogum/models/: schemas.py
apps/api/src/eogum/routes/: credits.py  downloads.py  evaluations.py  health.py  projects.py  renders.py  sources.py  upload.py  youtube.py
apps/api/src/eogum/services/: access_control.py  ai_cut_render.py  artifacts.py  avid.py  chalna.py  credit.py  database.py  email.py  final_preview_cache.py  job_runner.py  media_render.py  overlap_protection.py  overlap_speaker_mapping.py  r2.py  review_payload.py  source_cache.py  (+3 more)
apps/api/tests/: test_ai_cut_render.py  test_ai_frontier_backend.py  test_avid_service.py  test_chalna_segmentation_metadata.py  test_credit.py  test_database_clients.py  test_final_preview_intervals.py  test_job_runner_chalna_proxy.py  test_job_runner_podcast_resume.py  test_job_runner_scheduler.py  test_junction_audit.py  test_overlap_protection.py  test_overlap_speaker_mapping.py  test_project_rename.py  test_project_retry_history.py  test_projects_reprocess_helpers.py  test_public_final_preview.py  test_recover_scribe_transcript_script.py  test_source_derivatives_timecode.py
(+55 files in other folders)
